--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-web": "~0.11.7",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "react-native-vector-icons": "6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
